@@ -17,7 +17,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.sql.DataSource;
 
@@ -170,7 +169,7 @@ public class DatabaseService implements DatabaseInterface {
         List<FileInfo> filteredBackupList =
                 this.getBackupList().stream()
                         .filter(backup -> !backup.getFileName().startsWith(BACKUP_PREFIX + "user_"))
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (filteredBackupList.size() > 5) {
             deleteOldestBackup(filteredBackupList);
